--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,13 @@
 [project]
-name = "mysql-student-room-analysis-1"
-version = "0.1.0"
-description = "Add your description here"
+name = "student-room-analysis"
+version = "1.0.0"
+description = "A comprehensive Python application for analyzing student room data using MySQL, following SOLID principles"
+authors = [
+    {name = "Student Room Analysis Team"}
+]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "mysql-connector-python>=9.4.0",
+    "tabulate>=0.9.0",
 ]
